# Armorer-Guard

./: .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  NOTICE.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
armorer_guard/: __init__.py  cli.py
docs/: AGENT_BOUNDARIES.md  ARCHITECTURE.md  ATTACK_EXAMPLES.md  BENCHMARKS.md  CAPABILITIES.md  COMMUNITY_OUTREACH.md  COMPARISON.md  DEVTO_POST.md  DISCOVERY_SUBMISSIONS.md  DISTRIBUTION.md  HF_DEMO_RELEASE_CHECKLIST.md  LAUNCH_KIT.md  LAUNCH_POST.md  LAUNCH_POSTS_V023.md  MARKETING_PLAYBOOK.md  MCP_QUICKSTART.md  NPM_LAUNCH_POSTS.md  ONNX_CLASSIFIER_PLAN.md  RELEASE_NOTES_V030.md  RESULTS.md  SECURITY_MODEL.md  SHOW_HN.md  TECHNICAL_LAUNCH_POST.md  VIDEO_SCRIPT_NPM_LAUNCH.md
examples/: README.md  claude-code-hook.md  crewai_guard.py  cursor-mcp.md  github-action.yml  langchain_guard.py  mcp_proxy.md  mcp_tool_gate.py  nanoclaw.md  node_middleware.mjs  openai_agents_guard.py
fixtures/: benign.jsonl  credentials.jsonl  expected_verdicts.jsonl  mcp_tool_calls.jsonl  prompt_injection.jsonl
models/semantic_classifier/: eval_hard.json  eval_regression.json  metrics.json  semantic_classifier.joblib
models/semantic_experiments/: summary.json
models/semantic_experiments/char-onnx-sgd-t020/: eval_hard.json  eval_regression.json  experiment.json  metrics.json  onnx_parity_hard.json  semantic_classifier.joblib  semantic_classifier.onnx
models/semantic_experiments/char-onnx-sgd-t030/: eval_hard.json  eval_regression.json  experiment.json  metrics.json  semantic_classifier.joblib  semantic_classifier.onnx
models/semantic_experiments/char-sgd-t030/: eval_hard.json  eval_regression.json  experiment.json  metrics.json  semantic_classifier.joblib
models/semantic_experiments/word-logreg-onnx-t030/: eval_hard.json  eval_regression.json  experiment.json  metrics.json  semantic_classifier.joblib  semantic_classifier.onnx
models/semantic_experiments/word-sgd-onnx-ngrams13-t035/: eval_hard.json  eval_regression.json  experiment.json  metrics.json  semantic_classifier.joblib  semantic_classifier.onnx
models/semantic_experiments/word-sgd-onnx-t014/: eval_hard.json  eval_regression.json  experiment.json  labels.json  metrics.json  onnx_parity_hard.json  semantic_classifier.joblib
models/semantic_experiments/word-sgd-onnx-t020/: eval_hard.json  eval_regression.json  experiment.json  metrics.json  semantic_classifier.joblib  semantic_classifier.onnx
models/semantic_experiments/word-sgd-onnx-t030/: eval_hard.json  eval_regression.json  experiment.json  metrics.json  semantic_classifier.joblib  semantic_classifier.onnx
models/semantic_experiments/word-sgd-onnx-t042/: eval_hard.json  eval_regression.json  experiment.json  metrics.json  semantic_classifier.joblib
npm/armorer-guard/: README.md  cli.js  index.d.ts  index.js  package.json
npm/armorer-guard/test/: index.test.js
scripts/: build_profile_error_training_data.py  check_native_parity.py  check_onnx_parity.py  evaluate_semantic_classifier.py  export_native_semantic_classifier.py  fetch_model_artifacts.sh  generate_semantic_training_data.py  mine_public_benchmark_errors.py  run_semantic_experiments.py  smoke.sh  train_semantic_classifier.py
src/: dev_exemplars.tsv  main.rs  semantic_classifier.onnx  semantic_classifier_native.tsv  semantic_classifier_profile_native.tsv
src/armorer_guard/: __init__.py  inspection.py  models.py
tests/: test_inspection.py  test_python_package.py
