[package]
name = "armorer-guard"
version = "0.2.1"
edition = "2021"
description = "Fast local Rust scanner for AI-agent prompt injection, credential leaks, exfiltration, and risky tool calls."
readme = "README.md"
homepage = "https://github.com/ArmorerLabs/Armorer-Guard"
repository = "https://github.com/ArmorerLabs/Armorer-Guard"
license-file = "LICENSE.md"
keywords = ["security", "ai-agents", "prompt-injection", "guardrails", "rust"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE.md",
    "NOTICE.md",
    "README.md",
    "src/**",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
