[package]
name = "armorer-guard"
version = "0.3.1"
edition = "2021"
description = "Fast local Rust scanner for AI-agent prompt injection, credential leaks, exfiltration, and risky tool calls."
readme = "README.md"
homepage = "https://github.com/ArmorerLabs/Armorer-Guard"
repository = "https://github.com/ArmorerLabs/Armorer-Guard"
license = "MIT"
keywords = ["security", "ai-agents", "prompt-injection", "guardrails", "rust"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE.md",
    "/NOTICE.md",
    "/README.md",
    "/docs/AGENT_BOUNDARIES.md",
    "/docs/ARCHITECTURE.md",
    "/docs/ATTACK_EXAMPLES.md",
    "/docs/BENCHMARKS.md",
    "/docs/CAPABILITIES.md",
    "/docs/COMPARISON.md",
    "/docs/HF_DEMO_RELEASE_CHECKLIST.md",
    "/docs/MARKETING_PLAYBOOK.md",
    "/docs/RELEASE_NOTES_V030.md",
    "/docs/RESULTS.md",
    "/docs/SECURITY_MODEL.md",
    "/docs/assets/**",
    "/examples/README.md",
    "/examples/claude-code-hook.md",
    "/examples/crewai_guard.py",
    "/examples/cursor-mcp.md",
    "/examples/github-action.yml",
    "/examples/langchain_guard.py",
    "/examples/mcp_proxy.md",
    "/examples/mcp_tool_gate.py",
    "/examples/nanoclaw.md",
    "/examples/node_middleware.mjs",
    "/fixtures/*.jsonl",
    "/scripts/smoke.sh",
    "/src/**",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
