[project]
name = "armorer-guard"
version = "0.1.0"
description = "Private Armorer Guard package for credential interception and message inspection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/armorer_guard"]
