[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armorer-guard"
version = "0.3.0"
description = "Binary scanner package for Armorer Guard."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md", "NOTICE.md"]
authors = [{ name = "Armorer Labs", email = "dev@armorerlabs.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://armorerlabs.com"
Repository = "https://github.com/ArmorerLabs/Armorer-Guard"

[project.scripts]
armorer-guard-python = "armorer_guard.cli:main"
armorer-guard-py = "armorer_guard.cli:main"
